--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -1,7 +1,7 @@
 {% from "bootstrap5/form.html" import render_form %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('../static/assets/img/edit-bg.jpg')">
+<header class="masthead" style="background-image: url('../static/assets/img/wf-bg-v5.png')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
@@ -11,7 +11,7 @@
           {% else %}
           <h1>New Post</h1>
           {% endif %}
-          <span class="subheading">You're going to make a great post!</span>
+          <span class="page-subheading">You're going to make a great post!</span>
         </div>
       </div>
     </div>
