--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,13 @@
         <div class="post-heading">
           <h1>{{ post.title }}</h1>
           <h2 class="subheading">{{ post.subtitle }}</h2>
-          <span class="meta">Posted by <a href="/about#author">{{ post.author.name }}</a> on {{ post.date }}</span>
+          <span class="meta">
+            Posted by
+            <a href="/about#author"
+               class="wf-author"
+               data-author="{{ post.author.name }}">{{ post.author.name }}</a>
+            on {{ post.date }}
+          </span>
         </div>
       </div>
     </div>
