--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -18,7 +18,7 @@
   </div>
 </header>
 
-<main class="mb-4">
+<main class="mb-4 wf-makepost">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
