--- a/templates/secret-login.html
+++ b/templates/secret-login.html
@@ -32,7 +32,7 @@
           </g>
         </svg>
         <h2 class="wf-auth-title">Welcome back, Admin</h2>
-        <p class="wf-auth-sub">Sign in to craft new Wonders ✨</p>
+        <p class="wf-auth-sub">Sign in to create new wonders ✨</p>
       </div>
 
       <!-- Form -->
