--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,9 @@
   </div>
 </header>
 
-<!-- 🔘 Category Filter Buttons -->
+<!-- Category Filter Buttons -->
 <div class="container my-4 text-center">
   <div id="category-buttons" class="d-flex flex-wrap justify-content-center gap-2">
-    <!-- 0 = All -->
     <button class="btn btn-outline-primary active" data-category="0">All</button>
     <button class="btn btn-outline-primary" data-category="1">Wonders</button>
     <button class="btn btn-outline-primary" data-category="2">Science & Tech</button>
@@ -24,7 +23,7 @@
   </div>
 </div>
 
-<!-- 📄 Main Content -->
+<!-- Main Content -->
 <div class="container px-4 px-lg-5 mt-3">
   <div class="row gx-4 gx-lg-5 justify-content-center">
     <div class="col-md-11 col-lg-9 col-xl-9">
@@ -34,14 +33,14 @@
         {% include "partials/post-list.html" with context %}
       </div>
 
-      <!-- Add New Post Button (admin) -->
+      <!-- Add New Post Button (if admin=true) -->
       {% if current_user.is_authenticated and current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
           <a class="btn btn-primary float-right" href="{{ url_for('add_new_post') }}">Create New Post</a>
         </div>
       {% endif %}
 
-      <!-- ⬇️ Load More  -->
+      <!-- Load More -->
       <div class="d-flex justify-content-center my-4">
         <button id="load-more" class="btn btn-outline-primary"
                 style="display: {{ 'inline-block' if initial_has_more else 'none' }};">
