--- a/templates/post.html
+++ b/templates/post.html
@@ -30,7 +30,7 @@
           {{ post.body|safe }}
         </div>
 
-        <!-- Minimal Sources (collapsible) -->
+        <!-- Sources (collapsible) -->
         <div class="wf-sources my-4">
           <button
             class="wf-sources-toggle"
