add social media links to footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,26 +4,41 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         <ul class="list-inline text-center wf-socials">
           <li class="list-inline-item">
-            <a class="wf-social" href="#" aria-label="Instagram">
+            <a class="wf-social"
+               href="https://www.instagram.com/wonderfloyd.official/"
+               aria-label="Instagram"
+               target="_blank"
+               rel="noopener noreferrer">
               <i class="fab fa-instagram" aria-hidden="true"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="wf-social" href="#" aria-label="TikTok">
+            <a class="wf-social"
+               href="https://www.tiktok.com/@wonderfloyd"
+               aria-label="TikTok"
+               target="_blank"
+               rel="noopener noreferrer">
               <i class="fab fa-tiktok" aria-hidden="true"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="wf-social" href="#" aria-label="YouTube">
+            <a class="wf-social"
+               href="https://www.youtube.com/@WonderFloyd"
+               aria-label="YouTube"
+               target="_blank"
+               rel="noopener noreferrer">
               <i class="fab fa-youtube" aria-hidden="true"></i>
             </a>
           </li>
         </ul>
-                <div class="small text-center text-muted fst-italic">© {{ current_year }} WonderFloyd</div>
+        <div class="small text-center text-muted fst-italic">
+          © {{ current_year }} WonderFloyd
+        </div>
       </div>
     </div>
   </div>
 </footer>
+
 
 <button id="backToTop" class="wf-top" aria-label="Back to top" title="Back to top">
   <i class="fas fa-chevron-up" aria-hidden="true"></i>
